<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Launch</string>
    <string name="underline" tools:ignore="ExtraTranslation"><u>下划线测试</u></string>
    <string name="app_list">全部应用</string>
    <string name="menu">菜单</string>
    <string name="phone_book">电话本</string>
    <string name="todo">TODO</string>
    <string name="current_time">Current Time</string>
    <string name="confirm">确认</string>
    <string name="activity_not_found">App can\'t be found.</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="acceleration">一键加速</string>
    <string name="multimedia">多媒体</string>
    <string name="phonebook">电话本</string>
    <string name="phonecall">通话记录</string>
    <string name="sms">信息</string>
    <string name="toolbox">工具箱</string>
    <string name="music">音乐</string>
    <string name="camera">相机</string>
    <string name="recorder">录音机</string>
    <string name="gallery">图库</string>
    <string name="calculator">计算器</string>
    <string name="callblocking">来电屏蔽</string>
    <string name="clock">时钟</string>
    <string name="calendar">日历</string>
    <string name="lunarcalendar">老黄历</string>
    <string name="filemanager">文件管理器</string>
    <string name="simple_calculator">简单计算器</string>
    <string name="can">CE</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="clear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">＋</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">－</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="reciprocal">1/x</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">＝</string>
    <string name="my">我的</string>
    <string name="hp">首页</string>
    <string name="discover">发现</string>
    <string name="recentlyplayed">最近播放</string>
    <string name="localdownload">本地下载</string>
    <string name="clouddisk">云盘</string>
    <string name="purchased">已购</string>
    <string name="myfriend">我的好友</string>
    <string name="collectionsandlikes">收藏和赞</string>
    <string name="mypodcast">我的播客</string>
    <string name="musicfangroup">乐迷团</string>
    <string name="about_name">不畏浮云遮望眼</string>
    <string name="about_github">https://github.com/1900Star</string>
    <string name="about_sign">O ever youthful, O ever weeping.</string>
    <string name="about_project_introduce">

       ArtisanMusicPlayer 仿照锤子音乐播放器写的一个本地音乐播放器。会尽可能的实现锤子音乐播放器已有的功能，
        也会去除一些功能。比如去除:云音乐和联网搜索，主要还是播放本地音乐为主。 同时也会增加一些个人觉得有趣的交互，
        比如增加了类似QQ音乐的左右滑动切换上/下一曲的交互。
    </string>
    <string name="project_url">https://github.com/1900Star/SmartisanMusicPlayer</string>
    <string name="project_introduce">关于项目</string>
    <string name="child_view_not">SwipeItemLayout的子视图不符合规定</string>
    <string name="short_line">-</string>
    <string name="clear_all_favorite">清空</string>
    <string name="play_all">播放全部</string>
    <string name="music_add_time">添加时间</string>
    <string name="music_play_frequency">播放次数</string>
    <string name="music_score">评分</string>
    <string name="song_name">歌曲名</string>
    <string name="play_list">播放列表</string>
    <string name="music_artisan">艺术家</string>
    <string name="singer">歌手:</string>
    <string name="song_names">歌名:</string>
    <string name="music_song">歌曲</string>
    <string name="music_album">专辑</string>
    <string name="album_tile">平铺</string>
    <string name="album_list">列表</string>
    <string name="random_play">随机播放</string>
    <string name="add_new_play_list">新建播放列表</string>
    <string name="add_to_play_list">加到播放列表</string>
    <string name="add_to_play_queue">加到播放队列</string>
    <string name="rename_tile">重命名播放列表</string>
    <string name="load_music">正在拼命加载音乐,请稍候 -_-</string>
    <string name="cancel">取消</string>
    <string name="continues">继续</string>
    <string name="save_and_add">保存并添加</string>
    <string name="all_condition">全部</string>
    <string name="complete">完成</string>
    <string name="choice_operation">请选择操作</string>
    <string name="sure">确定</string>
    <string name="about">关于</string>
    <string name="favorite">喜欢</string>
    <string name="backups_favorite_song">备份收藏歌曲</string>
    <string name="recovery_favorite_song">恢复收藏歌曲</string>
    <string name="search_history">搜索历史</string>
    <string name="share_me">分享</string>
    <string name="clear_edit">清空输入框</string>
    <string name="not_search_result">无搜索结果</string>
    <string name="scanner_music">扫描本地音乐</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_delete">删除</string>
    <string name="lyrics">歌词</string>
    <string name="select_operation">选择操作</string>
    <string name="delete_play_list">删除列表</string>
    <string name="set_play_time">设定定时播放时间</string>
    <string name="timing_close_play">定时关闭播放</string>
    <string name="edit_play_list">编辑列表</string>
    <string name="baidu_key">4502b57559</string>
    <string name="app_info">ArtisanMusicPlayer 仿照锤子音乐播放器写的一个本地音乐播放器。 https://github.com/1900Star/SmartisanMusicPlayer </string>
    <string name="crash_log">CrashLog</string>
    <string name="take_photo">拍照</string>
    <string name="storage_permissions">存储权限未允许</string>
    <string name="choice_photo">从相册中选择照片</string>
</resources>