<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white" />

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/my"
            style="@style/tab_menu_item"
            android:text="@string/my"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/hp"
            style="@style/tab_menu_item"
            android:text="@string/hp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/dis"
            style="@style/tab_menu_item"
            android:text="@string/discover"
            android:textColor="@color/black"/>

    </RadioGroup>

</RelativeLayout>
